# pico-tutorial-rust

./: Cargo.toml
.cargo/: config.toml
.helix/: languages.toml
