[package]
name = "pico-tutorial-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"
embedded-hal-compat = "0.13.0"
fugit = "0.3.7"
i2c-character-display = { version = "0.5.0", features = ["ufmt"] }
libm = "0.2"
panic-halt = "1.0"
rp-pico = "0.9"
ufmt = { version = "0.2.0", default-features = false }
